Add Bristol stool chart, Update LICENSE.md

--- a/client/template/poo/pooLog.html
+++ b/client/template/poo/pooLog.html
@@ -1,3 +1,51 @@
 <template name="pooLog">
-  Poo Log!
+  <form class="main form">
+    <div class="form-group">
+      <label class="control-label" for="date">Date</label>
+      <div class="controls">
+        <input name="date" id="date" type="date" value="{{date}}" class="form-control">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label" for="time">Time</label>
+      <div class="controls">
+        <input name="time" id="time" type="time" value="{{time}}" class="form-control">
+      </div>
+    </div>
+    <div class="radio-inline">
+      <label class="control-label" for="qualityType1">Type 1</label>
+      <input name="qualityType" id="qualityType1" type="radio" value="1" class="form-control">
+      <object type="image/svg+xml" data="Bristol_stool_chart_Type_1.svg">Your browser does not support SVG</object>
+    </div>
+    <div class="radio-inline">
+      <label class="control-label" for="qualityType2">Type 2</label>
+      <input name="qualityType" id="qualityType2" type="radio" value="2" class="form-control">
+      <object type="image/svg+xml" data="Bristol_stool_chart_Type_2.svg">Your browser does not support SVG</object>
+    </div>
+    <div class="radio-inline">
+      <label class="control-label" for="qualityType3">Type 3</label>
+      <input name="qualityType" id="qualityType3" type="radio" value="3" class="form-control">
+      <object type="image/svg+xml" data="Bristol_stool_chart_Type_3.svg">Your browser does not support SVG</object>
+    </div>
+    <div class="radio-inline">
+      <label class="control-label" for="qualityType4">Type 4</label>
+      <input name="qualityType" id="qualityType4" type="radio" value="4" class="form-control">
+      <object type="image/svg+xml" data="Bristol_stool_chart_Type_4.svg">Your browser does not support SVG</object>
+    </div>
+    <div class="radio-inline">
+      <label class="control-label" for="qualityType5">Type 5</label>
+      <input name="qualityType" id="qualityType5" type="radio" value="5" class="form-control">
+      <object type="image/svg+xml" data="Bristol_stool_chart_Type_5.svg">Your browser does not support SVG</object>
+    </div>
+    <div class="radio-inline">
+      <label class="control-label" for="qualityType6">Type 6</label>
+      <input name="qualityType" id="qualityType6" type="radio" value="6" class="form-control">
+      <object type="image/svg+xml" data="Bristol_stool_chart_Type_6.svg">Your browser does not support SVG</object>
+    </div>
+    <div class="radio-inline">
+      <label class="control-label" for="qualityType7">Type 7</label>
+      <input name="qualityType" id="qualityType7" type="radio" value="7" class="form-control">
+      <object type="image/svg+xml" data="Bristol_stool_chart_Type_7.svg">Your browser does not support SVG</object>
+    </div>
+  </form>
 </template>
